project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dwkproject-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dwkproject
  template:
    metadata:
      labels:
        app: dwkproject
    spec:
      volumes:
        - name: dwkproject-vol
          persistentVolumeClaim:
            claimName: dwkproject-claim
      containers:
        - name: dwkproject
          image: hremonen/dwkproject:1.12_2
          volumeMounts:
            - name: dwkproject-vol
              mountPath: /usr/src/app/files
