project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dwkproject-svc
spec:
  type: ClusterIP
  selector:
    app: dwkproject
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
