project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwkproject-ingress
spec:
  rules:
  - http:
      paths:
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: dwkproject-backend-svc
            port:
              number: 2345
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dwkproject-svc
            port:
              number: 2345
